--- a/.travis.yml
+++ b/.travis.yml
@@ -48,47 +48,47 @@ matrix:
         - python: 'nightly'
         - python: 'pypy3'
   #before install run ppc jobs:
-     arch: ppc64le
+      - arch: ppc64le
              - python: '2.7'
           env:
             - COVERAGE="true"
             - NUMPY="true"
-     arch: ppc64le    
+      - arch: ppc64le    
         - python: '3.5'
           env:
             - COVERAGE="true"
-      arch: ppc64le
+      - arch: ppc64le
         - python: '3.6'
           env:
-      arch: ppc64le
+      - arch: ppc64le
         - python: '3.7'
           dist: xenial
           env:
-      arch: ppc64le
+      - arch: ppc64le
         - python: '3.8'
           dist: xenial
           env:
-      arch: ppc64le
+      - arch: ppc64le
         - python: '3.9'
           dist: xenial
           env:
-      arch: ppc64le
+      - arch: ppc64le
         - python: '3.10-dev'
           dist: xenial
           env:
-      arch: ppc64le
+      - arch: ppc64le
         - python: 'nightly'
           dist: xenial
           env:
-      arch: ppc64le
+      - arch: ppc64le
         - python: 'pypy'
           env:
-      arch: ppc64le
+      -  arch: ppc64le
         - python: 'pypy3'
           env:
 
     allow_failures:
-    arch: ppc64le
+      - arch: ppc64le
         - python: '3.10-dev'
         - python: 'nightly'
         - python: 'pypy3'
