--- a/.travis.yml
+++ b/.travis.yml
@@ -44,49 +44,60 @@ matrix:
         - python: '3.10-dev'
         - python: 'nightly'
         - python: 'pypy3'
-  #before install run ppc jobs:
-       arch: ppc64le
+  
+ #before install run ppc jobs:
+       
              - python: '2.7'
+               arch: ppc64le
           env:
             - COVERAGE="true"
             - NUMPY="true"
-       arch: ppc64le    
-        - python: '3.5'
+         
+        - python: '3.5arch: ppc64le
+          arch: ppc64le'
           env:
             - COVERAGE="true"
-       arch: ppc64le
+       
         - python: '3.6'
+          arch: ppc64le
           env:
-       arch: ppc64le
+       
         - python: '3.7'
+         arch: ppc64le
           dist: xenial
           env:
-       arch: ppc64le
+      
         - python: '3.8'
-          dist: xenial
-          env:
-       arch: ppc64le
+          arch: ppc64le
+          dist: xeniav:
+      
         - python: '3.9'
+          arch: ppc64le 
           dist: xenial
-          env:
-       arch: ppc64le
+
+       
         - python: '3.10-dev'
-          dist: xenial
+          arch: ppc64le
+         dist: xenial
           env:
-       arch: ppc64le
+       
         - python: 'nightly'
+          arch: ppc64le
           dist: xenial
           env:
-       arch: ppc64le
+       
         - python: 'pypy'
+          arch: ppc64le
           env:
-        arch: ppc64le
+        
         - python: 'pypy3'
+          arch: ppc64le
           env:
 
     allow_failures:
-       arch: ppc64le
+     
         - python: '3.10-dev'
+          arch: ppc64le
         - python: 'nightly'
         - python: 'pypy3'
 
