--- a/.travis.yml
+++ b/.travis.yml
@@ -53,8 +53,8 @@ matrix:
             - COVERAGE="true"
             - NUMPY="true"
          
-        - python: '3.5arch: ppc64le
-          arch: ppc64le'
+        - python: '3.5'
+          arch: ppc64le
           env:
             - COVERAGE="true"
        
@@ -63,7 +63,7 @@ matrix:
           env:
        
         - python: '3.7'
-         arch: ppc64le
+          arch: ppc64le
           dist: xenial
           env:
       
@@ -78,7 +78,7 @@ matrix:
        
         - python: '3.10-dev'
           arch: ppc64le
-         dist: xenial
+          dist: xenial
           env:
        
         - python: 'nightly'
