--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ matrix:
         - python: 'pypy3'
   
  #before install run ppc jobs:
-       
+         include:
              - python: '2.7'
                arch: ppc64le
                env:
