--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ matrix:
         - python: 'pypy3'
   
  #before install run ppc jobs:
+     matrix:
          include:
              - python: '2.7'
                arch: ppc64le
@@ -95,7 +96,6 @@ matrix:
           env:
 
     allow_failures:
-     
         - python: '3.10-dev'
           arch: ppc64le
         - python: 'nightly'
